@@ -3,6 +3,9 @@
 	* several (MINGW64): Cast and call fixups for 64 bit compatibility;
 	clean build via x86_64-w64-mingw32 cross toolchain on Linux i686
 	targeting x86_64 win64.
+	* ptw32_threadStart.c (ptw32_threadStart): Routine no longer attempts
+	to pass [unexpected C++] exceptions out of scope but ends the thread
+	normally setting EINTR as the exit status.
 
 2011-03-04  Ross Johnson <ross.johnson at homemail.com.au>
 
